# ZooTransform

./: .gitignore  README.md  Training_data.ipynb  del_setup.py  latent_space.ipynb  load_the_model.ipynb  optuna.ipynb  pyproject.toml  requirements.txt  run_UQ.ipynb  run_UQ2.ipynb  setup.cfg  setup.py  train_min2.ipynb  train_min2a.ipynb  validations.ipynb
dataset/: features_fine_tuning.py  protein_gyn_download_and_clean.py  pull_uniprot.ipynb
fine_tuning/: fine_tune.py
lora_finetuned_species_model/: README.md  adapter_config.json  adapter_model.safetensors
lora_finetuned_species_model_1000/: adapter_config.json  adapter_model.safetensors  added_tokens.json  special_tokens_map.json  tuned_embeddings_1000.npy
lora_finetuned_species_model_20000/: adapter_config.json  adapter_model.safetensors  tokenizer_config.json
src/dataset/: GYM_Ids.txt  protein_gyn_download_and_clean.py
src/fine_tuning/: fine_tuning.py
src/model/: species_model.py
src/zootransform/dataset/: load_uniprot.py  protein_gym_download_and_clean.py  uniprot_download_and_clean.py
src/zootransform/fine_tuning/: fine_tuning.py
src/zootransform/model/: species_model.py
src/zootransform/utils/: utils.py
src/zootransform/validation/: visualization.py
validation/: visualization.py
zoo_transform.egg-info/: PKG-INFO  SOURCES.txt
zootransform.egg-info/: PKG-INFO  SOURCES.txt
