[metadata]
name = zootransform
version = 0.0.0
description = Foundation model for species-specific proteins
author = C--
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License


[options]
packages = find:
; packages = zootransform
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy>=1.22
    pandas>=1.5
; zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
